--- a/css/artistes_page.css
+++ b/css/artistes_page.css
@@ -44,6 +44,8 @@ body {
     font-weight: bold;
     text-transform: uppercase;
     letter-spacing: 2px;
+    text-decoration: none;
+    color: white;
 }
 
 .artist-section {
